<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerPlaylist">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="287dp"
        android:layout_height="63dp"
        android:background="#003B2E57"
        android:text="@string/ver_playlist_title"
        android:textAlignment="center"
        android:textColor="?attr/android:textColorPrimary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTop"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/id_text"
        android:layout_width="255dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/id_base"
        android:textColor="?attr/android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="254dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/nombre_text_verplaylist"
        android:textColor="?attr/android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_text" />

    <EditText
        android:id="@+id/playlistName"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/hint_name_input"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="?attr/android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="293dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/descripcion_text_base"
        android:textColor="?attr/android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistName" />

    <EditText
        android:id="@+id/playlistDescription"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/hint_descripcion_input"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/actualizar_playlist_button"
        android:textColor="?attr/android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistDescription" />

    <Button
        android:id="@+id/buttonSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="88dp"
        android:text="@string/btn_ver_canciones"
        android:textColor="?attr/android:textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistDescription"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_borra_playlist"
        android:textColor="?attr/android:textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistDescription"
        app:layout_constraintVertical_bias="0.155" />


</androidx.constraintlayout.widget.ConstraintLayout>