<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePlaylistActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="271dp"
        android:layout_height="52dp"
        android:background="#003B2E57"
        android:text="@string/create_playlist_title"
        android:textAlignment="center"
        android:textColor="?attr/android:textColorPrimary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTop"
        app:layout_constraintVertical_bias="0.057"
        android:contentDescription="@string/descripcion_titulo_crear_playlist"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="254dp"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:padding="8dp"
        android:text="@string/playlist_name_label"
        android:textColor="?attr/android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title" />

    <EditText
        android:id="@+id/playlistName"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:textColor="?attr/android:textColorPrimary"
        android:textColorHint="?attr/android:textColorSecondary"
        android:hint="@string/hint_name_input"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="292dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/playlist_description_label"
        android:textColor="?attr/android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistName" />


    <EditText
        android:id="@+id/playlistDescription"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/hint_descripcion_input"
        android:textColorHint="?attr/android:textColorSecondary"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:padding="8dp"
        android:textColor="?attr/android:textColorPrimary"
        android:text="@string/text_crear_playlist_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>